src/App.scss
/* ... */
.table {
  align-self: center;
  border-radius: 3px;
  display: flex;
  flex-direction: column;
  font-size: 12px;
  margin-bottom: 2.5rem;
  overflow-x: auto;
  width: 28rem;

  .state-meta {
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    left: 0;
    margin-bottom: 1 + .25rem;
    margin-top: 1rem;
    position: sticky;

    svg {
      margin-right: .5rem;
    }

    .last-updated {
      align-items: center;
      color: $green;
      display: flex;
      flex-direction: row;
    }

    .state-page {
      align-items: center;
      background: $yellow-light;
      border-radius: 5px;
      color: $orange;
      cursor: pointer;
      display: flex;
      flex-direction: row;
      padding: .75rem;

      p {
        align-self: flex-end;
        flex: 1;
        margin: 0;
        text-align: right;
      }

      &:hover {
        background: $yellow-hover;
      }
    }
  }

  .row {
    cursor: pointer;
    display: flex;
    flex-direction: row;
    width: 100%;

    &:nth-child(odd) {
      .cell {
        background: $gray-light;
      }
    }

    &.is-highlighted {
      .cell {
        background: $gray-hover-opaque !important;
      }
    }

    &.heading {
      .cell {
        cursor: pointer;

        &:hover {
          background: $gray-hover-opaque !important;
        }
      }
    }

    &.is-total {
      position: sticky;
      top: 0;

      .cell {
        background: $gray-hover-opaque !important;
      }
    }

    .cell {
      align-items: center;
      border-radius: 3px;
      color: $gray;
      display: flex;
      flex-direction: row;
      margin-bottom: .25rem;
      padding: .5rem;
      position: relative;

      &:not(:first-child) {
        flex-basis: 3.5rem;
        flex-grow: 1;
        flex-shrink: 0;
        justify-content: flex-end;
      }

      &:first-child {
        background: $gray-hover-darker-opaque;
        flex-basis: 7.5rem;
        flex-grow: 0;
        flex-shrink: 0;
        justify-content: space-between;
        left: 0;
        position: sticky;
        z-index: 11;

        .sort-icon {
          left: unset;
          right: 0;
        }
      }

      svg {
        color: $gray-mid;
        stroke-width: 2.5px;
      }

      .sort-icon {
        left: 0;
        margin-left: .25rem;
        margin-right: .25rem;
        position: absolute;
        top: 0;

        &.is-confirmed {
          svg {
            color: $cherry;
          }
        }

        &.is-active {
          svg {
            color: $blue;
          }
        }

        &.is-recovered {
          svg {
            color: $green;
          }
        }

        &.is-deceased {
          svg {
            color: $gray;
          }
        }

        &.is-tested {
          svg {
            color: $purple;
          }
        }

        &.invert {
          margin-top: .25rem;
          transform: rotate(180deg);
        }
      }

      &.statistic {
        align-items: flex-end;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;

        .total {
          font-size: 14px;
        }

        .is-confirmed {
          color: $cherry;
        }

        .is-recovered {
          color: $green;
        }

        .is-deceased {
          color: $gray;
        }

        .is-tested {
          color: $purple;
        }
      }

      &:not(:last-child) {
        margin-right: 0.25rem;
      }

      &.heading {
        background: $gray-light-opaque;
        font-size: 13px;
        font-weight: 900;
        padding: .75rem .5rem;

        &:hover {
          background: $gray-hover-opaque !important;
        }
      }

      .state-name,
      .district-name {
        font-size: 14px;
        font-weight: 600;
        margin-right: .25rem;
        width: 6rem;
        word-wrap: break-word;
      }
    }
  }

  .spacer {
    color: $gray-mid;
    left: 0;
    margin-bottom: 1 + .25rem;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1rem;
    position: sticky;
    text-align: center;
    width: 10rem;

    .fold {
      cursor: pointer;

      &:hover {
        color: $gray;
      }
    }
  }

  .intersection {
    display: block;
  }

  @media (min-width: 769px) {
    .cell {
      &:first-child {
        flex-basis: 3rem;
      }

      &:not(:first-child) {
        flex-basis: 4rem;
      }
    }
  }
}

#chart {
  z-index: 10;
}

.anchor {
  cursor: pointer;
  position: absolute;
  right: 0;
  transform: rotate(45deg);
  transition: all 0.1s ease-in-out;
  z-index: 999;

  svg {
    color: $gray-mid;

    &:hover {
      color: $gray;
    }
  }

  &.stickied {
    transform: rotate(90deg);

    svg {
      color: $gray;
    }
  }
}
/* ... */

